--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://Ravinlathigra.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/images/western-university.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -109,28 +109,28 @@ analytics:
 author:
   name             : "Ravin Lathigra"
   avatar           : "/images/bio-pic.jpg"
-  bio              : "I am a data scientist passionate about bring insight and understanding to data"
+  bio              : "I am a data scientist passionate about bring insight to data to drive business value and understanding"
   location         : "London, Ontario, Canada"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:rlathigra@gmail.com@gmail.com
+       url: mailto:rlathigra@gmail.com@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://Ravinlathigra.github.io"
+       url: "https://Ravinlathigra.github.io"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/LathigraRavin"
+       url: "https://twitter.com/LathigraRavin"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/ravin.lathigra"
+       url: "https://facebook.com/ravin.lathigra"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/Ravinlathigra"
+       url: "https://github.com/Ravinlathigra"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/Ravinlathigra"
+       url: "https://instagram.com/Ravinlathigra"
 
 # Site Footer
 footer:
