--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: mailto:rlathigra@gmail.com@gmail.com
+       url: "mailto:rlathigra@gmail.com@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
        url: "https://Ravinlathigra.github.io"
