--- a/_config.yml
+++ b/_config.yml
@@ -115,10 +115,10 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       #url: mailto:rlathigra@gmail.com
+       url: mailto:rlathigra@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
-       #url: "https://ravinlathigra.github.io"
+       url: "https://ravinlathigra.github.io"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
        #url: "https://twitter.com/LathigraRavin"
@@ -127,7 +127,7 @@ author:
        #url: "https://facebook.com/ravin.lathigra"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       #url: "https://github.com/Ravinlathigra"
+       url: "https://github.com/Ravinlathigra"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
        #url: "https://instagram.com/Ravinlathigra"
@@ -293,3 +293,10 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
