--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ footer:
       # url:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
-       url: https://github.com/Ravinlathigra
+       url: "https://github.com/Ravinlathigra"
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url:
