--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Ravin Lathigra"
 description              : "This website contains a subset of my data science projects and blog posts for anyone interested in learning more about data science"
 url                      : "https://Ravinlathigra.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "Ravinlathigra/Ravinlathigra.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/images/logo.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -109,28 +109,28 @@ analytics:
 author:
   name             : "Ravin Lathigra"
   avatar           : "/images/bio-pic.jpg"
-  bio              : "I am a data scientist passionate about bring insight to data to drive business value and understanding"
+  bio              : "Data scientist excelling in machine learning, data wrangling and data visualization"
   location         : "London, Ontario, Canada"
-  email            :
+  email            : "rlathigra@gmail.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-       #url: mailto:rlathigra@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
-       #url: "https://ravinlathigra.github.io"
+      url: "https://www.copdips.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-       #url: "https://twitter.com/LathigraRavin"
+      # url: "https://twitter.com/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-       #url: "https://facebook.com/ravin.lathigra"
+      # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       #url: "https://github.com/"
+      url: "https://github.com/Ravinlathigra"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/ravin-lathigra-mda-asa-acia-42932183/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-       #url: "https://instagram.com/Ravinlathigra"
+      # url: "https://instagram.com/"
 
 # Site Footer
 footer:
@@ -141,12 +141,18 @@ footer:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: mailto:rlathgira@gmail.com
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/Ravinlathigra"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/ravin-lathigra-mda-asa-acia-42932183/"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
-       #url: "https://github.com/Ravinlathigra"
+      # url:
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url:
