--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ravin Lathigra"
+  name             : "Ravin Lathigra MDA, ASA, ACIA"
   avatar           : "/images/bio-pic.jpg"
   bio              : "Data scientist excelling in machine learning, data wrangling and data visualization"
   location         : "London, Ontario, Canada"
