--- a/_config.yml
+++ b/_config.yml
@@ -113,9 +113,9 @@ author:
   location         : "London, Ontario, Canada"
   email            : "rlathigra@gmail.com"
   links:
-    - label: "Website"
+    - label: "Resume"
       icon: "fas fa-fw fa-link"
-      url: "https://www.copdips.com"
+      url: "/images/Resume - Ravin Lathigra.pdf"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
